add redis cache for task